# tech-cost-platform

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml
config/rules/: v1_transactions.yaml  v2_named_users.yaml
docs/: DESIGN.md  architecture.md
examples/: lineage_worked_example.json
notebooks/: 00_setup.py  01_synth_and_bronze.py  02_silver.py  03_engine.py  04_reports.py  README.md
project_files/: AMENDMENT_RECEIPT_P-009.md  HANDOFF_P-000-MIGRATE_deltars.md  HANDOFF_P-001_scaffold.md  HANDOFF_P-002_synth-data.md  HANDOFF_P-003.1_test-harness.md  HANDOFF_P-003_bronze.md  HANDOFF_P-004_silver.md  HANDOFF_P-005.1_rules-mapping.md  HANDOFF_P-005_rules.md  HANDOFF_P-006_engine.md  HANDOFF_P-007_residual.md  HANDOFF_P-008_lineage.md  HANDOFF_P-009_gold-reports.md  HANDOFF_P-010_databricks-notebooks.md  PACKET_PLAN.md  PACKET_PLAN_docs_revision.md  PROJECT_BRIEF.md  RECEIPT_P-000-MIGRATE_deltars.md  RECEIPT_P-001.md  RECEIPT_P-002.md  RECEIPT_P-003.md  RECEIPT_P-004.md  RECEIPT_P-005.1_P-006.md  RECEIPT_P-005.md  RECEIPT_P-007.md  RECEIPT_P-008.md  RECEIPT_P-009.md  RECEIPT_P-010.md
src/tech_cost_platform/: __init__.py  delta_io.py  delta_tables.py  pipeline.py  runtime.py  spark.py
tests/: conftest.py  test_bronze.py  test_engine.py  test_gold.py  test_lineage.py  test_pipeline.py  test_residual.py  test_rules.py  test_silver.py  test_silver_build.py  test_smoke.py  test_strategies.py  test_synth.py
tests/fixtures/: cost_centers_duplicate_conflict.csv  gl_costs_malformed.csv  (+2 more)
(+34 files in other folders)
