[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tech-cost-platform"
version = "0.1.0"
description = "Scaffolded tech cost platform with local Spark and Delta support."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "delta-spark==3.3.2",
  "pydantic>=2,<3",
  "pyspark==3.5.8",
  "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-timeout>=2.4,<3",
  "ruff>=0.12,<0.13",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120
timeout_method = "thread"

[tool.ruff]
line-length = 100
target-version = "py311"
